Added GitHub workflow for Snap release automation
- Copied .github/workflows/auto-update.yml from
  ubuntu/gnome-calculator GitHub repo, but call
  ubuntu/desktop-snaps@stable for the GitHub action doing the actual
  updating.

- Prepared snapcraft.yaml for Snap release automation:
  o Load app-2 from the GIT repo and not from the tarball, as the
    other parts
  o Load source from the current release tags in the GIT repos
  o Add "source-depth: 1" as it is required by the automation script
  o Add "# ext:updatesnap" blobs to exclude using source of the 2.x
    series or x.9x releases.

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -41,18 +41,37 @@ parts:
   app-1:
     source: https://github.com/tillkamppeter/versioning-example-app-1
     source-type: git
+    source-tag: '0.1.0'
+    source-depth: 1
+# ext:updatesnap
+#   version-format:
+#     lower-than: '2'
+#     no-9x-revisions: true
     plugin: make
     override-pull: |
       craftctl default
       craftctl set version=$(git describe --tags --abbrev=10)
 
   app-2:
-    source: https://github.com/tillkamppeter/versioning-example-app-2/archive/refs/tags/0.1.0.tar.gz
+    source: https://github.com/tillkamppeter/versioning-example-app-2
+    source-type: git
+    source-tag: '0.1.0'
+    source-depth: 1
+# ext:updatesnap
+#   version-format:
+#     lower-than: '2'
+#     no-9x-revisions: true
     plugin: make
 
   app-3:
     source: https://github.com/tillkamppeter/versioning-example-app-3
     source-type: git
+    source-tag: '0.1.0'
+    source-depth: 1
+# ext:updatesnap
+#   version-format:
+#     lower-than: '2'
+#     no-9x-revisions: true
     plugin: dump
     organize:
       app-3: usr/bin/
